2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (file_close): FILE *fp = f->file;

2004-03-10  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (cob_sort_init): Use temporary sort file.
	(cob_sort_finish): Delete sort file.
	(cob_open): No filename mapping for SORT files.

2004-03-09  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* move.c (cob_binary_set_int, cob_binary_set_int64): Reimplemented.
	(Thanks to Roger While)

2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (file_open): Open files in the text mode for line
	sequential files.

2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (file_open, file_close): Use fcntl for file locking.

2003-10-01  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): New member `flag_pretty_display'.
	* termio.c (display): Updated.

2003-09-29  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.c (cob_is_numeric): Test packed decimal.

2003-08-30  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): Replace `flag_binary_print_full' by
	`flag_binary_truncate'.  Related functions updated.

2003-08-29  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* termio.h (COB_SYSIN, COB_SYSOUT, COB_SYSERR): Removed.
	* termio.h, termio.c (cob_display_error): New function.
	(cob_newline_error): New function.

2003-08-27  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* fileio.c: Compile indexed and sort i/o only when either of
	HAVE_DBOPEN or WITH_DB is defined.

2003-08-26  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): New member `flag_filename_mapping'.
	* fileio.c (cob_open): filename mapping.

2003-08-26  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h, common.c (cob_a2e, cob_e2a): New variables.

2003-08-25  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* fileio.c (sort_read): Bug fix of first read.

2003-08-25  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* fileio.h, fileio.c (cob_sort_init): 3rd argument `sequence'.
	(cob_sort_finish): New function.
