@@ -1,5 +1,9 @@
 2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
 
+	* screenio.c: #include <ncurses.h>
+
+2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
+
 	* fileio.c (file_close): FILE *fp = f->file;
 
 2004-03-10  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
